--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" sizes="16x16 32x32 48x48" type="image/png" href="./media/seo.png">
 </head>
+
+<header>
+    <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="./pages/about.html">About</a></li>
+          <li><a href="./pages/media.html">Media</a></li>
+          <li><a href="#citas">Citas</a></li>
+          <li><a href="#recetas">Recetas</a></li>
+          <li><a href="#ranking">Ranking</a></li>
+          <li><a href="#contact">Contacto</a></li>
+        </ul>
+      </nav>
+</header>
+
 <body>
-    <header>
-        <h2>Este es mi header</h2>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="./pages/about.html">About</a>
-            <a href="./pages/contact.html">Contact</a>
-            <a href="./pages/media.html">Media</a>
-        </nav>
-        
-    </header>
     <!-- Aquí empieza sección principal -->
     <main>
         <section id="intro">
